Revert "Fixed divider element overflow"
This reverts commit c39d17c51416d96f867aa6ba21453c29148923c1.

--- a/css/utilities/helpers.css
+++ b/css/utilities/helpers.css
@@ -27,12 +27,10 @@
   background:transparent;
   transition:padding .45s cubic-bezier(.22,.61,.36,1),
              opacity .35s ease;
-  will-change:padding,opacity;
-  overflow:hidden;
+  will-change:padding,opacity
 }
 #carousel-gap .wrapper{
   width:100%;
-  overflow:hidden;
 }
 #carousel-gap .contrib-divider{
   padding:40px 0;
